# Hunyuan3D-2.1-mcp

./: .gitignore  INTEGRATION_README.md  README.md  convert_to_3d.py  direct_generation.py  enhanced_webui_integration.py  other_info.md  pyproject-linux.toml  pyproject.toml
blender-mcp/: PROMPT_USAGE_GUIDE.md  README_INTEGRATION.md  WEBUI_INTEGRATION_GUIDE.md  WORKFLOW_GUIDE.md  addon.py  demo_workflow.py  main.py  prompt_examples.py  pyproject.toml  quick_test.py  requirements.txt  sd_optimization_presets.py  sd_parameter_optimizer.py  simple_webui_test.py  test_webui_integration.py
blender-mcp/examples/: README.md  basic_blender_example.py  blender_mcp_prompts.md  blender_mcp_test_script.md  complete_scene_example.py  mcp_client_example.py  prompt_test_example.py  quick_test.py  quick_test_prompt.txt  text_to_3d_example.py
blender-mcp/src/blender_mcp/: enhanced_webui_tools.py  sd_optimization_presets.py  sd_parameter_optimizer.py  server.py  workflow_manager.py
